--- a/.github/workflows/my-basics.yml
+++ b/.github/workflows/my-basics.yml
@@ -3,8 +3,8 @@
 #by VE
 name: MyGithubActionsBasics
 env:
-  application_name
-  key: [ ]
+  application_name: "MyFlask"
+  DEPLOY_PACKAGE_NAME: "flask-deploy-version-${{ github.sha }}"
 
 on:
   push:
@@ -19,8 +19,12 @@ jobs:
     steps:
      - name: Print Hello Message
        run: echo "Hello World from Testing Job"
-  
-  
+     - name: Execute few commands
+       run : |
+          echo "Hello message 1"
+          echo "Hello message 2"
+          echo "Application name: ${{ env.application_name }}"          
+          
   
   my_deploy:
     runs-on: ubuntu-latest
@@ -29,6 +33,9 @@ jobs:
     steps:
      - name: Print Hello Message
        run: echo "Hello World from Deploy Job"
+       
+     - name: Printing deployment package
+       run : echo "Deploy package name is ${{ env. DEPLOY_PACKAGE_NAME }} "
     
     
     
