--- a/.github/workflows/my-basics.yml
+++ b/.github/workflows/my-basics.yml
@@ -35,7 +35,8 @@ jobs:
   my_deploy:
     runs-on: ubuntu-latest
     needs: [my_testing]
-    
+    env:
+      VAR1: "This is Job leve Variable1"
     steps:
      - name: Print Hello Message
        run: echo "Hello World from Deploy Job"
